--- a/minimal_net_binary_classifier.ipynb
+++ b/minimal_net_binary_classifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,8 +11,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 26,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -113,33 +115,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "iteration 0: loss 0.693008\n",
-      "iteration 100: loss 0.011667\n",
-      "iteration 200: loss 0.011240\n",
-      "iteration 300: loss 0.011153\n",
-      "iteration 400: loss 0.011096\n",
-      "iteration 500: loss 0.011049\n",
-      "iteration 600: loss 0.011008\n",
-      "iteration 700: loss 0.010973\n",
-      "iteration 800: loss 0.010941\n",
-      "iteration 900: loss 0.010914\n",
-      "iteration 1000: loss 0.010889\n",
-      "iteration 1100: loss 0.010868\n",
-      "iteration 1200: loss 0.010848\n",
-      "iteration 1300: loss 0.010831\n",
-      "iteration 1400: loss 0.010816\n",
-      "iteration 1500: loss 0.010803\n",
+      "iteration 0: loss 0.692994\n",
+      "iteration 100: loss 0.011608\n",
+      "iteration 200: loss 0.011213\n",
+      "iteration 300: loss 0.011133\n",
+      "iteration 400: loss 0.011080\n",
+      "iteration 500: loss 0.011036\n",
+      "iteration 600: loss 0.010998\n",
+      "iteration 700: loss 0.010964\n",
+      "iteration 800: loss 0.010935\n",
+      "iteration 900: loss 0.010908\n",
+      "iteration 1000: loss 0.010885\n",
+      "iteration 1100: loss 0.010864\n",
+      "iteration 1200: loss 0.010846\n",
+      "iteration 1300: loss 0.010829\n",
+      "iteration 1400: loss 0.010815\n",
+      "iteration 1500: loss 0.010802\n",
       "iteration 1600: loss 0.010791\n",
-      "iteration 1700: loss 0.010780\n",
-      "iteration 1800: loss 0.010771\n",
-      "iteration 1900: loss 0.010762\n"
+      "iteration 1700: loss 0.010782\n",
+      "iteration 1800: loss 0.010774\n",
+      "iteration 1900: loss 0.010767\n"
      ]
     }
    ],
@@ -206,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +238,7 @@
        "array([0, 1, 1, 0])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,14 +249,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " for [0,0,1] -  [[0.99843542 0.00156458]]\n"
+      " for [0,0,1] -  [[0.99848527 0.00151473]]\n"
      ]
     }
    ],
@@ -266,6 +268,13 @@
     "print(' for [0,0,1] - ', probs)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
