--- a/minimal_net_binary_classifier.ipynb
+++ b/minimal_net_binary_classifier.ipynb
@@ -229,44 +229,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0, 1, 1, 0])"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "predicted_class"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " for [0,0,1] -  [[0.99848527 0.00151473]]\n"
+      " for [1,0,1] -  [[0.00138533 0.99861467]]\n"
      ]
     }
    ],
    "source": [
-    "scores =np.dot(np.dot([0,0,1], W)+b,W2)+b2\n",
+    "\n",
+    "hidden_layer = np.maximum(0, np.dot([1,0,1], W) + b) # note, ReLU activation\n",
+    "scores = np.dot(hidden_layer, W2) + b2\n",
+    "\n",
     "# compute the class probabilities\n",
     "exp_scores = np.exp(scores)\n",
-    "probs = exp_scores / np.sum(exp_scores, axis=1, keepdims=True)  # [N x K]\n",
-    "print(' for [0,0,1] - ', probs)\n",
-    "\n"
+    "probs = exp_scores / np.sum(exp_scores, axis=1, keepdims=True) # [N x C]\n",
+    "print(' for [1,0,1] - ', probs)"
    ]
   },
   {
